# Humanoid-Robotic-System

./: README.md
hrs_ws/logs/nao_control_tutorial_2/: build.check.007.log.stderr  build.check.008.log.stderr  build.check.009.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  (+36 more)
hrs_ws/logs/nao_control_tutorial_3/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr
hrs_ws/logs/tutorial_2/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  (+652 more)
hrs_ws/logs/tutorial_3/: build.check.715.log.stderr  build.check.775.log.stderr  build.check.776.log.stderr  build.check.777.log.stderr  (+754 more)
hrs_ws/src/: Readme
hrs_ws/src/nao_control_tutorial_1/: CMakeLists.txt  ReadME
hrs_ws/src/nao_control_tutorial_1/src/: client.cpp  client.py
hrs_ws/src/nao_control_tutorial_1/srv/: MoveJoints.srv
hrs_ws/src/project_E/: CMakeLists.txt
hrs_ws/src/project_E/src/: blink.cpp  client.py  controller.py  main.cpp  mapper.py  mover.cpp
hrs_ws/src/project_E/srv/: MoveInterpol.srv  getMap.srv  getNAOPosition  getTransform.srv  goCoord.srv  initPosition.srv  setPositions.srv
hrs_ws/src/tutorial_7/: CMakeLists.txt
hrs_ws/src/tutorial_7/src/: blink.cpp  main.cpp
(+225 files in other folders)
